recruitment-project/src/main/java/com/example/recruitmentproject/errors/IncorrectHeaderException.java
package com.example.recruitmentproject.errors;

public class IncorrectHeaderException extends RuntimeException {

    public IncorrectHeaderException(String statusText) {
        super(statusText);
    }


}
